--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <br>
                             <label class="InputTempo">Tempo:</label>
                                 <select name="tempoDeMensalidade"  id="tempo de contribuicao em meses">
+                                        <option selected value="0">--Selecione--</option>
                                         <option value="1">1 Mês</option>
                                         <option value="2">2 Mêses</option>
                                         <option value="3">3 Mêses</option>
@@ -58,6 +59,7 @@
                                         <option value="23">1 Ano e 11 Meses</option>
                                         <option value="24">2 Anos</option>
                                 </select>
+                                <span class="Error"></span>
                                 <br>
             
                                 <button type="submit" class="break" id="Calcular">Simular</button>
